generates news and showing eco news according to users habits is in progress